# Meta-Dart

./: .gitignore  .gitmodules  CMakeLists.txt
include/: arm.hpp  camera.hpp  config.hpp  decision.hpp  kinematics.hpp  triple_buffer.hpp  types.hpp  vision.hpp
python/yolo/: README.md  __init__.py  dart_dataset.yaml  dataset.py  loss.py  model.py  play.py  requirements.txt  train.py
src/: arm.cpp  camera.cpp  decision.cpp  kinematics.cpp  main.cpp  vision.cpp
test/: calibrate_gripper.cpp  clear_errors.cpp  scan_motors.cpp  test_arm.cpp
